@@ -1,7 +1,5 @@
 #!/bin/bash
 
-# JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
-
 if [ "${JMX_ENABLED}" == "true" ]; then
     JMX_PATH=${JMX_PATH:-"/data/jmx_javaagent.jar"}
     JMX_PORT=${JMX_PORT:-8081}
